minor showcase section-title size change to fix iphone 11 clipping

--- a/src/components/Showcase/Showcase.css
+++ b/src/components/Showcase/Showcase.css
@@ -135,7 +135,7 @@
 		flex-direction: column;
 	}
 	.left-section {
-		width: 80%;
+		width: 100%;
 		margin: 0 auto;
 		order: 2;
 	}
